Deprecation refactor (#84)
* Initial refactor for deprecated method calls

* Refactor scoreboard to component API

* Fix a slew of general warnings

* Fix clearing of created bingo cards, cleanup location util

* Refactor deprecated use of titles

* Fix minor code style

* Fix formatting of itemdist command