@@ -21,6 +21,8 @@ import com.extremelyd1.title.TitleManager;
 import com.extremelyd1.util.*;
 import com.extremelyd1.world.WorldManager;
 import com.extremelyd1.world.spawn.SpawnLoader;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.*;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.PluginCommand;
@@ -37,17 +39,6 @@ import java.util.Random;
 import java.util.logging.Logger;
 
 public class Game {
-
-    /**
-     * The prefix string
-     */
-    public static final String PREFIX = ChatColor.BOLD.toString() + ChatColor.BLUE + "BINGO " + ChatColor.RESET;
-    /**
-     * The divider string
-     */
-    private static final String DIVIDER = PREFIX + ChatColor.STRIKETHROUGH
-            + "                                                                        ";
-
     /**
      * The plugin instance
      */
@@ -114,7 +105,7 @@ public class Game {
     /**
      * Whether PvP is enabled
      */
-    private boolean pvpEnabled = false;
+    private boolean pvpDisabled = true;
 
     /**
      * The bingo card that is currently used
@@ -142,7 +133,7 @@ public class Game {
         worldManager = new WorldManager(this);
 
         gameBoardManager = new GameBoardManager(this);
-        teamManager = new TeamManager(this);
+        teamManager = new TeamManager();
 
         bingoCardItemFactory = new BingoCardItemFactory(this);
         bingoItemMaterials = new BingoItemMaterials(this);
@@ -168,11 +159,11 @@ public class Game {
     private void registerListeners(JavaPlugin plugin) {
         Bukkit.getPluginManager().registerEvents(this.worldManager, plugin);
         Bukkit.getPluginManager().registerEvents(new PlayerJoinLeaveListener(this), plugin);
-        Bukkit.getPluginManager().registerEvents(new ItemListener(this), plugin);
+        Bukkit.getPluginManager().registerEvents(new ItemListener(this, bingoCardItemFactory), plugin);
         Bukkit.getPluginManager().registerEvents(new ChatListener(this), plugin);
         Bukkit.getPluginManager().registerEvents(new MotdListener(this), plugin);
-        Bukkit.getPluginManager().registerEvents(new DeathListener(this), plugin);
-        Bukkit.getPluginManager().registerEvents(new InteractListener(this), plugin);
+        Bukkit.getPluginManager().registerEvents(new DeathListener(this, bingoCardItemFactory), plugin);
+        Bukkit.getPluginManager().registerEvents(new InteractListener(this, bingoCardItemFactory), plugin);
         Bukkit.getPluginManager().registerEvents(new DamageListener(this), plugin);
         Bukkit.getPluginManager().registerEvents(new FoodListener(this), plugin);
         Bukkit.getPluginManager().registerEvents(new MoveListener(this), plugin);
@@ -194,7 +185,7 @@ public class Game {
             put("start", new StartCommand(game));
             put("end", new EndCommand(game));
             put("bingo", new BingoCommand(game));
-            put("card", new CardCommand(game));
+            put("card", new CardCommand(game, bingoCardItemFactory));
             put("pvp", new PvpCommand(game));
             put("maintenance", new MaintenanceCommand(game));
             put("wincondition", new WinConditionCommand(game));
@@ -241,9 +232,11 @@ public class Game {
             getLogger().warning("No teams have been selected, cannot start game");
 
             if (player != null) {
-                player.sendMessage(
-                        ChatColor.DARK_RED + "Error: "
-                                + ChatColor.WHITE + "No teams have been selected, cannot start game"
+                player.sendMessage(ChatUtil.errorPrefix()
+                        .append(Component
+                                .text("No teams have been selected, cannot start game")
+                                .color(NamedTextColor.WHITE)
+                        )
                 );
             }
 
@@ -268,8 +261,11 @@ public class Game {
         );
 
         if (player != null) {
-            player.sendMessage(
-                    Game.PREFIX + "Preparing spawn locations for teams..."
+            player.sendMessage(ChatUtil.waitPrefix()
+                    .append(Component
+                            .text("Preparing spawn locations for teams...")
+                            .color(NamedTextColor.WHITE)
+                    )
             );
         }
 
@@ -284,12 +280,18 @@ public class Game {
      */
     private void onSpawnsLoaded(Player player, List<Location> locations) {
         if (player != null) {
-            player.sendMessage(
-                    Game.PREFIX + "Spawn locations found, starting game"
+            player.sendMessage(ChatUtil.successPrefix()
+                    .append(Component
+                            .text("Spawn locations found, starting game")
+                            .color(NamedTextColor.WHITE)
+                    )
             );
         }
 
         this.state = State.IN_GAME;
+
+        // Clear previously created bingo cards
+        bingoCardItemFactory.clearCreatedBingoCards();
 
         // Create random bingo card
         bingoCard = new BingoCard(bingoItemMaterials.pickMaterials(), winConditionChecker.getCompletionsToLock());
@@ -350,10 +352,15 @@ public class Game {
         gameBoardManager.broadcast();
 
         // Broadcast start message
-        Bukkit.broadcastMessage(
-                DIVIDER + "\n"
-                        + PREFIX + "                           Game has started!\n"
-                        + DIVIDER
+        Bukkit.broadcast(
+                ChatUtil.divider()
+                        .append(Component.newline())
+                        .append(Component
+                                .text(" ".repeat(28) + "Game has started!")
+                                .color(NamedTextColor.WHITE)
+                        )
+                        .append(Component.newline())
+                        .append(ChatUtil.divider())
         );
 
         // Send sounds
@@ -389,28 +396,32 @@ public class Game {
      * @param winReason The reason for the game to end
      */
     public void end(WinReason winReason) {
-        String message = DIVIDER + "\n" + PREFIX;
+        Component message = ChatUtil.divider().append(Component.newline());
 
-        switch (winReason.getReason()) {
-            case COMPLETE:
+        message = switch (winReason.getReason()) {
+            case COMPLETE -> {
                 PlayerTeam team = winReason.getTeam();
-                message += "                     " + team.getColor() + team.getName()
-                        + ChatColor.WHITE + " team "
-                        + "has gotten bingo!";
-                break;
-            case RANDOM_TIE:
-                // Don't do anything with ties yet
-                message += "                      Game has ended in a tie!";
-                break;
-            case NO_WINNER:
-            default:
-                message += "                            Game has ended!";
-                break;
-        }
+                yield message.append(Component
+                        .text(" ".repeat(21) + team.getName())
+                        .color(team.getColor())
+                ).append(Component
+                        .text(" team has gotten bingo!")
+                        .color(NamedTextColor.WHITE)
+                );
+            }
+            case RANDOM_TIE -> message.append(Component
+                            .text(" ".repeat(22) + "Game has ended in a tie!")
+                            .color(NamedTextColor.WHITE)
+                    );
+            default -> message.append(Component
+                    .text(" ".repeat(30) + "Game has ended!")
+                    .color(NamedTextColor.WHITE)
+            );
+        };
 
-        message += "\n" + DIVIDER;
+        message = message.append(Component.newline()).append(ChatUtil.divider());
 
-        Bukkit.broadcastMessage(message);
+        Bukkit.broadcast(message);
 
         titleManager.sendEndTitle(winReason);
 
@@ -430,13 +441,13 @@ public class Game {
                 ItemStack bingoCardItemStack = bingoCardItemFactory.create(
                         bingoCard,
                         team,
-                        ColorUtil.chatColorToInt(team.getColor())
+                        ColorUtil.textColorToInt(team.getColor())
                 );
 
                 // Change the item name to include team name and color
                 ItemMeta meta = bingoCardItemStack.getItemMeta();
                 if (meta != null) {
-                    meta.setDisplayName(team.getColor() + team.getName() + " Team");
+                    meta.customName(Component.text(team.getName() + " Team").color(team.getColor()));
                 }
                 bingoCardItemStack.setItemMeta(meta);
 
@@ -450,6 +461,7 @@ public class Game {
                 // Set own bingo card in offhand if player has a team
                 Team team = teamManager.getTeamByPlayer(onlinePlayer);
                 if (team != null && !team.isSpectatorTeam()) {
+                    //noinspection SuspiciousMethodCalls
                     onlinePlayer.getInventory().setItemInOffHand(
                             bingoCardItemStacks.get(team)
                     );
@@ -536,11 +548,16 @@ public class Game {
 
             if (config.notifyOtherTeamCompletions()) {
                 // Broadcast a message of this collection
-                Bukkit.broadcastMessage(
-                        PREFIX +
-                                collectorTeam.getColor() + collectorTeam.getName()
-                                + ChatColor.WHITE + " team has obtained "
-                                + ChatColor.AQUA + StringUtil.formatMaterialName(material)
+                Bukkit.broadcast(Component
+                        .text(collectorTeam.getName())
+                        .color(collectorTeam.getColor())
+                        .append(Component
+                                .text(" team has obtained ")
+                                .color(NamedTextColor.WHITE))
+                        .append(Component
+                                .text(ChatUtil.formatMaterialName(material))
+                                .color(NamedTextColor.AQUA)
+                        )
                 );
             }
 
@@ -570,7 +587,7 @@ public class Game {
                 soundManager.broadcastItemCollected(collectorTeam);
             } else if (winners.size() == 1) {
                 // If there is a single winner, we can announce it
-                end(new WinReason(winners.get(0), WinReason.Reason.COMPLETE));
+                end(new WinReason(winners.getFirst(), WinReason.Reason.COMPLETE));
             } else {
                 // Otherwise, end the game with a random tie
                 end(new WinReason(
@@ -617,8 +634,8 @@ public class Game {
         maintenance = !maintenance;
     }
 
-    public boolean isPvpEnabled() {
-        return pvpEnabled;
+    public boolean isPvpDisabled() {
+        return pvpDisabled;
     }
 
     public BingoCard getBingoCard() {
@@ -626,7 +643,7 @@ public class Game {
     }
 
     public void togglePvp() {
-        pvpEnabled = !pvpEnabled;
+        pvpDisabled = !pvpDisabled;
     }
 
     public JavaPlugin getPlugin() {
